specs/blueprints/errors/parsing/unterminated_multiline_field.eno
# A multiline field with an incomplete multiline field operator in the ending line

-- input
-- multiline_field
value
value
value
- multiline_field
-- input

## ParseError

-- text
The multiline field 'multiline_field' starting in line 1 is not terminated until the end of the document.
-- text

-- snippet
   Line | Content
 >    1 | -- multiline_field
 *    2 | value
 *    3 | value
 *    4 | value
 *    5 | - multiline_field
-- snippet

selection: [0,0] => [0,18]

# A multiline field with an edge case key and missing space in the ending line

-- input
-- -
value
value
value
---
-- input

## ParseError

-- text
The multiline field '-' starting in line 1 is not terminated until the end of the document.
-- text

-- snippet
   Line | Content
 >    1 | -- -
 *    2 | value
 *    3 | value
 *    4 | value
 *    5 | ---
-- snippet

selection: [0,0] => [0,4]
